cli/tests/snapshots/integration__run_images@rotate2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="55.0" height="55.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 4.5 L 49.5 0.5 L 54.5 49.5 L 4.5 54.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
</svg>
