cli/tests/snapshots/integration__run_images@rotate3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="85.0" height="85.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 70.710678 L 28.284271 42.426407 L 42.426407 56.568542 L 14.142136 84.852814 Z" fill="rgba(143, 188, 143, 1.0)" />
    <path d="M 0.0 14.142136 L 14.142136 0.0 L 84.852814 70.710678 L 70.710678 84.852814 Z" fill="rgba(143, 188, 143, 1.0)" />
  </g>
</svg>
