cli/tests/snapshots/integration__run_images@scale1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="80.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 40.0 30.0 A 20.0 30.0 0.0 0 1 0.0 30.0 A 20.0 30.0 0.0 0 1 40.0 30.0 Z" fill="rgba(0, 0, 255, 1.0)" />
    <path d="M 80.0 30.0 A 20.0 30.0 0.0 0 1 40.0 30.0 A 20.0 30.0 0.0 0 1 80.0 30.0 Z" fill="rgba(0, 0, 255, 1.0)" />
  </g>
</svg>
