cli/tests/snapshots/integration__run_images@square1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 40.0 0.0 L 40.0 40.0 L 0.0 40.0 Z" fill="rgba(106, 90, 205, 1.0)" />
</svg>
