cli/tests/snapshots/integration__run_images@square2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 0.5 L 50.5 0.5 L 50.5 50.5 L 0.5 50.5 Z" fill="none" stroke="rgba(139, 0, 139, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
</svg>
