cli/tests/snapshots/integration__run_images@star_polygon3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="65.0" height="62.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 22.36068 61.553671 L 6.18034 11.755705 L 58.54102 11.755705 L 42.36068 61.553671 L 0.0 30.776835 L 42.36068 0.0 L 58.54102 49.797966 L 6.18034 49.797966 L 22.36068 0.0 L 64.72136 30.776835 Z" fill="rgba(100, 149, 237, 1.0)" />
</svg>
